--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.24.10",
     "lucide-react": "^0.562.0",
-    "next": "15.1.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-google-autocomplete": "^2.7.5"
+    "next": "16.1.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
+    "react-google-autocomplete": "^2.7.5",
+    "shared-ui": "file:../shared-ui"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.0",
+    "eslint-config-next": "16.1.1",
     "typescript": "^5"
   }
 }
